	(twittering-update-active-buffers): invoke
	`twittering-update-service-configuration'.

	* twittering-mode.el: Count characters with considering the t.co
	link wrapper.
	(twittering-effective-length): new function.
	(twittering-edit-length-check): check the length with
	`twittering-effective-length'.
	(twittering-edit-post-status): likewise.
	(twittering-show-minibuffer-length): likewise.

2011-08-18  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Display the requested URI if a HTTP request
	has failed.
	(twittering-send-http-request): display the requested method and
	URI if the request has failed.

2011-08-17  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Correctly store icons when
	`twittering-convert-fix-size' is nil.
	(twittering-save-icon-properties): correctly generate stored
	representation of icon images when its size is not specified
	explicitly.

2011-08-14  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Update the API for a list timeline.
	(twittering-call-api): use the current API for retrieving a list
	timeline.

	* twittering-mode.el: Support ":retweeted_to_user/USER" timeline.
	(twittering-timeline-spec-to-string): support `retweeted_to_user'
	timeline.
	(twittering-extract-timeline-spec): support a string like
	":retweeted_to_user/USER" as a `retweeted_by_user' timeline.
	(twittering-timeline-spec-primary-p): add `retweeted_to_user'
	as a primary timeline.
	(twittering-call-api): support `retweeted_to_user' timeline.
	(twittering-read-timeline-spec-with-completion): add
	":retweeted_to_user/" as a candidate.

	* twittering-mode.el: Support ":retweeted_by_user/USER" timeline.
	(twittering-timeline-spec-to-string): support `retweeted_by_user'
	timeline.
	(twittering-extract-timeline-spec): support a string like
	":retweeted_by_user/USER" as a `retweeted_by_user' timeline.
	(twittering-timeline-spec-primary-p): add `retweeted_by_user'
	as a primary timeline.