@@ -49,6 +49,13 @@
   新されます。デフォルトの更新間隔は1日ですが、変数
   `twittering-service-configuration-update-interval'で変更することもで
   きます。
+* 非ASCII文字を含むハッシュタグへの簡易的な対応
+  非ASCII文字を含むハッシュタグについても、強調表示されるようになり、
+  `v'でそのtimelineを開くことができるようになりました。ハッシュタグの
+  検出基準がTwitterのweb UIのそれとは多少異なる点に注意してください。
+  今のところ大きな問題は見つかっていませんが、場合によっては
+  twittering-mode上でハッシュタグと見なされる文字列がTwitterのweb UIで
+  はハッシュタグとは見なされない恐れはあります。
 
 ### バグ修正
 * 認証成功・失敗についてのメッセージが表示されるよう修正
